cambios de estructura

--- a/Models/Principal.html
+++ b/Models/Principal.html
@@ -20,7 +20,7 @@
         <a href="#" onclick="showSection('registros')">Registros</a>
         <a href="#" onclick="showSection('clientes')">Clientes</a>
         <a href="#" onclick="showSection('sepalacola')">SEPALACOLA</a>
-        <a href="#" class="logout-container" onclick="window.location.href='/SPVD/Models/Login.html'">
+        <a href="#" class="logout-container" onclick="window.location.href='/SPVD/Login.html'">
             <i class='bx bx-log-out-circle'></i>
             <span>Cerrar sesión</span>
         </a>
