Agregar función para obtener y mostrar el número de clientes en el dashboard

--- a/Models/Principal.html
+++ b/Models/Principal.html
@@ -46,19 +46,20 @@
         <div class="cards-container">
             <div class="card">  
                 <h3>Monitoreo</h3>
-                <p>Content for card 1</p>
+                <p>rellenar</p>
             </div>
             <div class="card">
                 <h3>Clientes</h3>
-                <p>Content for card 2</p>
+                <p id="numero-clientes"></p>
+
             </div>
             <div class="card">
                 <h3>Registros</h3>
-                <p>Content for card 3</p>
+                <p>rellenar</p>
             </div>
             <div class="card">
                 <h3>Instalaciones</h3>
-                <p>Content for card 4</p>
+                <p>rellenar</p>
             </div>
         </div>
     </section>
