Agregar página de inicio de sesión y corregir enlace de cierre de sesión

--- a/Models/Principal.html
+++ b/Models/Principal.html
@@ -34,7 +34,7 @@
             <i class='bx bx-dizzy'></i>
             <span>Tecnicos</span>
         </a>
-        <a href="#" class="logout-container" onclick="window.location.href='/SPVD/Login.html'">
+        <a href="#" class="logout-container" onclick="window.location.href='/SPVD/index.html'">
             <i class='bx bx-log-out-circle'></i>
             <span>Cerrar sesión</span>
         </a>
