--- a/Models/Principal.html
+++ b/Models/Principal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/SPVD/Views/Principal.css">
+    <link rel="stylesheet" href="Views/Principal.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
@@ -13,7 +13,7 @@
 <body>
     <div id="sidebar" class="sidebar">
         <button class="closebtn" onclick="closeNav()">x</button>
-        <img src="/SPVD/Images/VanguardiaDigital.png" alt="">
+        <img src="Images/VanguardiaDigital.png" alt="">
         <a href="#" onclick="showSection('dashboard')">
             <i class='bx bxs-dashboard'></i>
             <span>Dashboard</span>
@@ -105,6 +105,6 @@
 
     </section>
     <!-- ------------------------------------------------------------------- -->
-    <script type="module" src="/SPVD/Controllers/Principal.js" defer></script>
+    <script type="module" src="Controllers/Principal.js" defer></script>
 </body>
 </html>
