Actualizar rutas de archivos

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <p>Bienvenido</p>
             <input type="text" id="user" placeholder="Usuario" />
             <input type="password" id="password" placeholder="Contraseña" />
-            <button id="login" onclick="window.location.href='/SPVD/Models/Principal.html'">Iniciar Sesión</button><br>
+            <button id="login" onclick="window.location.href='Models/Principal.html'">Iniciar Sesión</button><br>
             <button id="forgot">Olvidé mi contraseña</button>
         </div>
         <div class="right-panel"></div>
