--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <link rel="stylesheet" href="Views/Login.css" />
-  </head>f
+  </head>
 
   <body>
     <div class="container">
         <div class="left-panel">
             <img src="/Images/VanguardiaDigital.png" alt="Logo">
             <p>Bienvenido</p>
-            <input type="text" id="user" placeholder="Usuario" />
+            <input type="text" id="username" placeholder="Usuario" />
             <input type="password" id="password" placeholder="Contraseña" />
-            <button id="login" onclick="window.location.href='Models/Principal.html'">Iniciar Sesión</button><br>
+            <button id="login" onclick="agregarRegistroBitacora(); window.location.href='Models/Principal.html';">Iniciar Sesión</button><br>
             <button id="forgot">Olvidé mi contraseña</button>
         </div>
         <div class="right-panel"></div>
     </div>
-
-    <script type="module" src="Controllers/Login.js"></script>
+    
+    <script type="module" src="/Controllers/Login.js"></script>
 </body>
 
 </html>
