--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="stylesheet" href="Views/Login.css" />
+    <link rel="stylesheet" href="/SPVD/Views/Login.css" />
   </head>
 
   <body>
     <div class="container">
         <div class="left-panel">
-            <img src="/Images/VanguardiaDigital.png" alt="Logo">
+            <img src="/SPVD/Images/VanguardiaDigital.png" alt="Logo">
             <p>Bienvenido</p>
             <input type="text" id="username" placeholder="Usuario" />
             <input type="password" id="password" placeholder="Contraseña" />
@@ -20,7 +20,7 @@
         <div class="right-panel"></div>
     </div>
     
-    <script type="module" src="/Controllers/Login.js"></script>
+    <script type="module" src="/SPVD/Controllers/Login.js"></script>
 </body>
 
 </html>
